2008-03-04  Badlop  <badlop@process-one.net>

	* doc/guide.tex: mod_announce recommends, but doesn't require
	mod_adhoc (thanks to Anastasia Gornostaeva)
	* doc/guide.html: Likewise
	* src/ejabberd.cfg.example: Likewise

2008-02-29  Alexey Shchepin  <alexey@process-one.net>

	* src/mod_roster.erl: Fixed "from" attribute in roster pushes
	* src/mod_roster_odbc.erl: Likewise

2008-02-28  Badlop  <badlop@process-one.net>

	* src/ejabberd_app.erl (prep_stop): Stop modules when stopping
	ejabberd (EJAB-536)
	* src/mod_caps.erl (stop): Probably not needed to stop supervisor
	child (EJAB-536)
	* src/mod_muc/mod_muc.erl (room_destroyed): Catch message
	sending (EJAB-536)
	* src/mod_muc/mod_muc_room.erl (init): Ensure rooms are called
	when the process dies due to a linked die (EJAB-536)

2008-02-27  Mickael Remond <mremond@process-one.net>

	* src/ejabberd_check.erl: Separate config loading from
	configuration sanity checks (EJAB-533)
	* src/src/ejabberd_app.erl: Likewise
	* src/ejabberd_app.erl: Likewise
	
2008-02-26  Badlop  <badlop@process-one.net>

	* src/msgs/it.msg: Updated (thanks to Smart2128)

2008-02-21  Badlop  <badlop@process-one.net>

	* doc/release_notes_2.0.0.txt: Small fixes and update date

2008-02-20  Badlop  <badlop@process-one.net>

	* README: Updated to match the content of the ejabberd Guide

	* doc/release_notes_2.0.0.txt: Updated version number and date

	* src/ejabberd.hrl: Updated version number
	* doc/dev.html: Likewise
	* doc/features.html: Likewise
	* doc/guide.html: Likewise
	* doc/version.tex: Likewise

	* doc/guide.tex: Mentioned the problems about Windows service
	* doc/guide.html: Likewise

	* src/msgs/ru.msg: Updated (thanks to Konstantin Khomoutov)
	* src/msgs/zh.msg: Updated (thanks to Mike Wang and Zhan Caibao)

2008-02-19  Badlop  <badlop@process-one.net>

	* src/msgs/ca.msg: Updated (thanks to Vicent Alberola Canet)
	* src/msgs/cs.msg: Updated (thanks to Lukas Polivka)
	* src/msgs/de.msg: Updated (thanks to Cord Beermann and Nikolaus